Creation du HTML Complet

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
         </section>
 
-        <section class="voyage">
+        <section class="voyage-apli">
 
             <h1>Votre guide de voyage personnel</h1>
             <h2>Excursion se souvient des endroits que vous aimez et recommande de nouveaux points d'intérêt autour de vous.</h2>
