--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
             <video autoplay muted loop>
                 
-                <source src="/video/excursion.mp4" type="video/mp4">
+                <source src="/resources/video/excursion.mp4" type="video/mp4">
             
             </video>
 
@@ -33,12 +33,12 @@
 
             <h1>Votre guide de voyage personnel</h1>
             <h2>Excursion se souvient des endroits que vous aimez et recommande de nouveaux points d'intérêt autour de vous.</h2>
-            <img src="/img/camp.jpg" alt="image de paysage">
+            <img src="/resources/img/camp.jpg" alt="image de paysage">
         </section>
 
         <section class="disponibilite">
 
-            <img src="/img/phone.png" alt="telephone">
+            <img src="/resources/img/phone.png" alt="telephone">
             <h1>Bientôt disponible pour iphone et Android</h1>
             <a href="#">Télécgarger Excursion (Bientôt disponible !)</a>
 
